--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
+  <!-- Fav icon -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+  <!-- Style -->
+  <link rel="stylesheet" href="./styles/style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | QR code component</title>
 </head>
+
 <body>
 
-  Improve your front-end skills by building projects
+  <!-- <p>Improve your front-end skills by building projects</p>
+  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  <div>
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/theksbd" target="_blank">theksbd - Đỗ Thiện Hoàng</a>.
+  </div> -->
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <img src="./images/image-qr-code.png" alt="qr-code" class="qr-img">
+    <p class="title">Improve your front-end skills by building projects</p>
+    <p class="paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
+
+
 </body>
+
 </html>
